# causal-platform

./: .gitignore  CLA.md  Dockerfile.dev  Makefile  NOTICE  README.md  coverage.xml  docker-compose.yml  poetry.toml  pyproject.toml  pytest.ini
causal_platform/: CODEOWNERS  __init__.py
causal_platform/src/models/: data_model.py
causal_platform/src/models/analyser_model/: ab_analyser.py  analyser.py  diff_in_diff_analyser.py
causal_platform/src/models/configuration_model/: __init__.py  base_objects.py  config.py
causal_platform/src/models/message/: enums.py  message.py
causal_platform/src/models/preprocessor_model/: base.py
causal_platform/src/models/result_model/: result.py
causal_platform/src/pipeline/experiment_pipelines/: ab_pipeline.py  diff_in_diff_pipeline.py  experiment_pipeline.py
causal_platform/src/pipeline/power_calculators/: ab_power_calculator.py
causal_platform/src/pipeline/preprocess_pipelines/: ab_preprocess_pipeline.py  diff_in_diff_preprocess_pipeline.py  preprocess_pipeline.py
causal_platform/src/utils/: common_utils.py  config_utils.py  constants.py  dashab_timer.py  delta_method.py  error.py  logger.py  preprocessing_utils.py  validation_utils.py
causal_platform/src/utils/diff_in_diff/: calculation.py  plotting.py  prep_data.py
causal_platform/src/utils/experiment/: bootstrap.py  fitter_utils.py  group_sequential.py  result_utils.py  stats_utils.py  use_t.py
causal_platform/tests/data/: ab_test_data.csv  causal_test_data.csv  data_generator.py  multi_ratio_cov_data.csv  sample_data.csv
causal_platform/tests/unit/: data.py
(+33 files in other folders)
