[tool.poetry]
authors = ["DoorDash"]
description = "A Scalable Causal Inference Library"
exclude = ["causal_platform/tests"]
name = "causal-platform"
readme = "README.md"
repository = "https://github.com/doordash/causal-platform"
version = "0.1.66"



[tool.poetry.dependencies]
python = ">=3.8.1,<=3.10"

matplotlib = "3.5.3"
numpy = "1.23.2"
pandas = "1.4.4"
scipy = "1.9.1"
pydantic="1.10.2"
joblib = "*"
statsmodels = "0.13.2"

[tool.poetry.dev-dependencies]
black = "22.8.0"
flake8 = "*"
isort = "5.12.0"
pre-commit = "*"
pyarrow = "^9.0.0"
pytest = "7.1.3"
pytest-cov = "3.0.0"
pytest-mock = "3.8.2"
setuptools = "^65.5.1"
snowflake-connector-python = "^3.1.0"
twine = "4.0.1"
mkdocs = "^1.4.2"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.22.0"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocstrings-python = "^0.8.3"
cryptography = "^41.0.2"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/doordash/causal_platform/issues"


[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0", "pip>=20.0.0"]
